--- a/index.html
+++ b/index.html
@@ -176,6 +176,16 @@
                         <p>3. Convocation officielle après paiement des frais</p>
                     </div>
                 </div>
+
+                <div class="mt-4 p-6 bg-blue-50 border-2 border-blue-300 rounded-xl">
+                    <div class="text-center">
+                        <p class="font-bold text-blue-800 mb-3 text-lg">💬 Besoin d'aide ?</p>
+                        <p class="text-blue-700 mb-4">Si vous n'arrivez pas à vous inscrire, contactez-nous directement sur WhatsApp :</p>
+                        <div class="bg-white border-2 border-blue-400 rounded-lg p-4 inline-block">
+                            <p class="font-bold text-blue-900 text-2xl">+225 07 05 23 00 33</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -418,5 +428,5 @@ ${firstName} ${lastName}`;
             alert('Votre candidature a été transmise avec succès ! Vous allez être redirigé vers WhatsApp pour finaliser votre inscription et effectuer le paiement de 8 000 FCFA.');
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97f2834922feb7a5',t:'MTc1Nzg4MDQ3MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97f2f8d56049b7a5',t:'MTc1Nzg4NTI4NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
